posiGen_FullsendBox/src/objects/Collaboration__c.object
<CustomObject>
    <fields>
        <fullName>BoxCollaboration_Id__c</fullName>
        <externalId>true</externalId>
        <label>BoxCollaboration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BoxFolder_Id__c</fullName>
        <label>BoxFolder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BoxGroup_Id__c</fullName>
        <label>BoxGroup Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BoxUser_Id__c</fullName>
        <label>BoxUser Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFProfile_Id__c</fullName>
        <label>SFProfile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFUser_Email__c</fullName>
        <label>SFUser Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sub_Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Folder</label>
        <referenceTo>Sub_Folder__c</referenceTo>
        <relationshipLabel>Collaborations</relationshipLabel>
        <relationshipName>Collaborations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Collaboration</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Collaboration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaborations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>